--- a/src/templates/ResetPassword.ejs
+++ b/src/templates/ResetPassword.ejs
@@ -26,6 +26,7 @@
         border-radius: 10px;
         border: 1px solid #0c0e0c; /* Black border */
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
       }
 
       h1 {
@@ -50,14 +51,17 @@
       }
 
       .digit-box {
-        padding: 15px 18px;
+        padding: 10px 20px;
         background-color: #f5f0e1;
         border-radius: 10px;
         text-align: center;
+        vertical-align: middle;
+      }
+      .digit-box p {
+        margin: 0;
         font-size: 24px;
         font-weight: bold;
         color: #0c0e0c;
-        vertical-align: middle;
       }
     </style>
   </head>
@@ -75,12 +79,13 @@
             <!-- Using a table to ensure proper centering -->
             <table class="pin-table" role="presentation">
               <tr>
-                <td class="digit-box">1</td>
-                <td class="digit-box">1</td>
-                <td class="digit-box">1</td>
-                <td class="digit-box">1</td>
-                <td class="digit-box">1</td>
-                <td class="digit-box">1</td>
+                <td class="digit-box"><p><%= pin[0] %></p></td>
+                <td class="digit-box"><p><%= pin[1] %></p></td>
+                <td class="digit-box"><p><%= pin[2] %></p></td>
+                <td class="digit-box"><p><%= pin[3] %></p></td>
+                <td class="digit-box"><p><%= pin[4] %></p></td>
+                <td class="digit-box"><p><%= pin[5] %></p></td>
+
               </tr>
             </table>
 
