chore: fix reset password, login, renew access token

--- a/src/templates/EmailVerification.ejs
+++ b/src/templates/EmailVerification.ejs
@@ -78,7 +78,7 @@
             </p>
             <p>
               Please click the button below to confirm your email address and
-              finish setting up your account. This link is valid for 30 minutes.
+              finish setting up your account. This link is valid for <%= expiration %>.
             </p>
             <a href="<%= verificationLink %>" class="verify-button">
               <span style="color: inherit; text-decoration: none"
